# inkeface-cpp-client

./: CMakeLists.txt  README.md
libdevcore/: CMakeLists.txt  FixedHash.h
libsign/: CMakeLists.txt  SignTx.cpp  chaincode.pb.cc  chaincode.pb.h  main.cpp
